--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,9 @@
         "nodejs-nodemailer-outlook": "^1.2.4",
         "nodemailer": "^6.7.8",
         "process": "^0.11.10",
+        "puppeteer": "^19.6.3",
+        "puppeteer-extra": "^3.3.4",
+        "puppeteer-extra-plugin-stealth": "^2.11.1",
         "winston": "^3.8.1"
     },
     "devDependencies": {
